Adding alarm functionality
